refactored shrimptacular and edited css

--- a/shrimptacular.html
+++ b/shrimptacular.html
@@ -8,6 +8,7 @@
 	<meta name="Keywords" content="crowdfunding, chefs, foodie, diner, pop up restaurant" />
 	<link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.1.0/pure-min.css">
 	<link rel="stylesheet" href="main.css"/>
+	<link href='http://fonts.googleapis.com/css?family=Pompiere' rel='stylesheet' type='text/css'>
 	<script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
 </head>
 <body>
@@ -29,44 +30,47 @@
 <br>
 <!--End Header -->
 <!--Projects -->
+<div class="project-padding">
 <div class="pure-g-r">
-<div class="pure-u-1">
-	<div class="project"></div>
-</div>
-</div>
- <div class="project pure-g-r">
-		<div class="pure-u-7-8">
-			<div class="pure-u-1-3">
-				<div class="l-box project-image">
-					<img src="http://placehold.it/600x400"
-					     alt="Placeholder image for example.">
-				</div>
-				<h2 class="t-box project-subhead">
-					Combining awesome shrimp and noodles into an new delicacy.
-				</h2>
-			</div>
-
-			<div class="pure-u-2-3">
-				<div class="l-box project-text">
-					<h1 class="project-head">
-						Shrimp-Tacular
-					</h1>
-					<h4 class="cuisine">Asian Fusion</h4>
-					<ul class="pure-u-1-8 project-list">
-						<li>Chef:</li>
-						<li>Area:</li>
-						<li>Date:</li>
-					</ul>
-					<ul class="pure-u-1-2 project-list">
-						<li>Chesterton, Robb</li>
-						<li>Capitol Hill</li>
-						<li>Jun 30</li>
-					</ul>
-				</div>
-			</div>
-		</div>
+	<div class="pure-u-1">
+		<h1>Shrimp-Tacular</h1>
+		<h2 class="cuisine">Asian Fusion</h2>
 	</div>
 
+	    <div class="pure-u-1-3">
+		    <img src="img/shrimp.jpg" alt="shrimp plate"/>
+	    </div>
+        <div class="pure-u-1-3">
+	        <div class="project-padding">
+			<div class="skill-bar s-large">
+					<div class="skill-bar-content eighty content-large"></div>
+			</div>
+			<div class="pure-u-1-4">
+				<p class="funded">80% Funded</p>
+			</div>
+			<div class="pure-u-3-8 align">
+					<p class="funded">14 days left</p>
+			</div>
+
+		    <div class="pure-u-4-5">
+			    <ul class="project-list">
+				    <li>A fusion of Asian and Creole cuisine</li>
+				    <li>By Chef James McNally</li>
+				    <li>In Capitol Hill, Seattle</li>
+				    <li>June 30th</li>
+			    </ul>
+		    </div>
+	        <p class="btntext">
+		        <a href="#" class="pure-button primary-button b-large">Reserve your seat <br> $25</a>
+	        </p>
+	        </div>
+        </div>
+	<div class="pure-u-1-2">
+		    <p>Come join us for a four course </p>
+	</div>
+
+</div>  <!--end g-r -->
+</div> <!--end container -->
 <!-- Footer -->
 
 <div class="footer pure-g-r">
