--- a/index.html
+++ b/index.html
@@ -177,8 +177,8 @@
 		<div class="pure-g-r">
 			<div class="pure-u-1-3">
 				<div class="l-box project-image">
-					<img class="imgbox" src="img/shrimp.jpg"
-					     alt="Placeholder image for example.">
+					<a href="shrimptacular.html"><img class="imgbox" src="img/shrimp.jpg"
+					     alt="shrimp plate"></a>
 				</div>
 			</div>
 
@@ -199,8 +199,8 @@
 						<li>Jun 30</li>
 					</ul>
 					<div class="skill-bar">
-						<div class="skill-bar-content eighty"></div>
-					</div>
+					<div class="skill-bar-content eighty"></div>
+				</div>
 					<div class="pure-u-3-8">
 						<p class="funded">80% Funded</p>
 					</div>
