added menu and changed css

--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
 			<div class="pure-u-2-3">
 				<div class="l-box project-text">
 					<h1 class="project-head">
-						Shrimp-Tacular
+						Malafacha
 					</h1>
 					<h4 class="cuisine">Asian Fusion</h4>
 					<ul class="pure-u-1-8 project-list">
@@ -342,6 +342,5 @@
 		    <p class="copy">&copy; Wandering Chef 2013</p>
 	    </div>
     </div>
-</div>
 </body>
 </html>
