--- a/shrimptacular.html
+++ b/shrimptacular.html
@@ -9,6 +9,7 @@
 	<link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.1.0/pure-min.css">
 	<link rel="stylesheet" href="main.css"/>
 	<link href='http://fonts.googleapis.com/css?family=Pompiere' rel='stylesheet' type='text/css'>
+	<link href='http://fonts.googleapis.com/css?family=Muli' rel='stylesheet' type='text/css'>
 	<script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
 </head>
 <body>
@@ -66,18 +67,23 @@
 	        </div>
         </div>
 	<div class="pure-u-1-2">
-		    <p>Come join us for a four course </p>
+		    <p>Come join us for a four course meal highlighting the fusion of traditional asian cuisine and
+		       Pacific Northwest.</p>
+	</div>
+	<div class="pure-g-r">
+		<div class="menu">
+			<img src="img/menu.png" alt="menu"/>
+		</div>
 	</div>
 
-</div>  <!--end g-r -->
-</div> <!--end container -->
-<!-- Footer -->
-
-<div class="footer pure-g-r">
+</div><!--end g-r-->
+</div> <!--end container-->
+<!-- Footer-->
+<div class="footer pure-g-r footer-fix">
 	<div class="pure-u-1-4">
-		<p class="copy">Copyright Pop-up restaurants</p>
+		<p class="copy">&copy; Wandering Chef 2013</p>
 	</div>
 </div>
-</div>
+
 </body>
 </html>
