--- a/index.html
+++ b/index.html
@@ -172,8 +172,19 @@
 
 								<!--Projects -->
 
-
+  	<div class="project pure-u-11-24">
+	    <img src="img/Home_Diversion.png" alt="Diversion project"/>
+  	</div>
 	<div class="project pure-u-11-24">
+		<img src="img/Home_Suadero.png" alt="Suadero project"/>
+	</div>
+	<div class="project pure-u-11-24">
+		<img src="img/Home_BigTrouble.png" alt="Big Trouble project"/>
+	</div>
+	<div class="project pure-u-11-24">
+		<img src="img/Home_Suadero.png" alt="TakoTruk project"/>
+	</div>
+<!--	<div class="project pure-u-11-24">
 		<div class="pure-g-r">
 			<div class="pure-u-1-3">
 				<div class="l-box project-image">
@@ -251,8 +262,8 @@
 				</div>
 			</div>
 		</div>
-	</div>
-
+	</div>      -->
+  <!--
 	<div class="project pure-u-11-24">
 		<div class="pure-g-r">
 			<div class="pure-u-1-3">
@@ -331,7 +342,7 @@
 				</div>
 			</div>
 		</div>
-	</div>
+	</div>  -->
 
 </div>
 
