--- a/shrimptacular.html
+++ b/shrimptacular.html
@@ -31,53 +31,26 @@
 <br>
 <!--End Header -->
 <!--Projects -->
-<div class="project-padding">
-<div class="pure-g-r">
-	<div class="pure-u-1">
-		<h1>Shrimp-Tacular</h1>
-		<h2 class="cuisine">Asian Fusion</h2>
+<div pure-g-r>
+	<div class="pure-u-1 ">
+		<img src="img/SUADERO_projectbanner.png" alt="banner"/>
+		<img class="banner" src="img/SUADERO_projectoverlay.png" alt=""/>
 	</div>
 
-	    <div class="pure-u-1-3">
-		    <img src="img/shrimp.jpg" alt="shrimp plate"/>
-	    </div>
-        <div class="pure-u-1-3">
-	        <div class="project-padding">
-			<div class="skill-bar s-large">
-					<div class="skill-bar-content eighty content-large"></div>
-			</div>
-			<div class="pure-u-1-4">
-				<p class="funded">80% Funded</p>
-			</div>
-			<div class="pure-u-3-8 align">
-					<p class="funded">14 days left</p>
-			</div>
-
-		    <div class="pure-u-4-5">
-			    <ul class="project-list">
-				    <li>A fusion of Asian and Creole cuisine</li>
-				    <li>By Chef James McNally</li>
-				    <li>In Capitol Hill, Seattle</li>
-				    <li>June 30th</li>
-			    </ul>
-		    </div>
-	        <p class="btntext">
-		        <a href="#" class="pure-button primary-button b-large">Reserve your seat <br> $25</a>
-	        </p>
-	        </div>
-        </div>
-	<div class="pure-u-1-2">
-		    <p>Come join us for a four course meal highlighting the fusion of traditional asian cuisine and
+</div>
+<div class="pure-g-r">
+<div class="container">
+	<div class="pure-u-1">
+		    <p class="meal-description">Come join us for a four course meal highlighting the fusion of traditional asian cuisine and
 		       Pacific Northwest.</p>
 	</div>
 	<div class="pure-g-r">
 		<div class="menu">
-			<img src="img/menu.png" alt="menu"/>
+			<img class="imgcontainer" src="img/menu.png" alt="menu"/>
 		</div>
 	</div>
-
-</div><!--end g-r-->
-</div> <!--end container-->
+</div>
+</div>
 <!-- Footer-->
 <div class="footer pure-g-r footer-fix">
 	<div class="pure-u-1-4">
