corrected sizing issues

--- a/index.html
+++ b/index.html
@@ -176,13 +176,13 @@
 	    <img src="img/Home_Diversion.png" alt="Diversion project"/>
   	</div>
 	<div class="project pure-u-11-24">
-		<img src="img/Home_Suadero.png" alt="Suadero project"/>
+		<a href="shrimptacular.html"><img src="img/Home_Suadero.png" alt="Suadero project"/></a>
 	</div>
 	<div class="project pure-u-11-24">
 		<img src="img/Home_BigTrouble.png" alt="Big Trouble project"/>
 	</div>
 	<div class="project pure-u-11-24">
-		<img src="img/Home_Suadero.png" alt="TakoTruk project"/>
+		<img src="img/Home_TakoTruk.png" alt="TakoTruk project"/>
 	</div>
 <!--	<div class="project pure-u-11-24">
 		<div class="pure-g-r">
