--- a/shrimptacular.html
+++ b/shrimptacular.html
@@ -31,13 +31,10 @@
 <br>
 <!--End Header -->
 <!--Projects -->
-<div pure-g-r>
-	<div class="pure-u-1 ">
-		<img src="img/SUADERO_projectbanner.png" alt="banner"/>
-		<img class="banner" src="img/SUADERO_projectoverlay.png" alt=""/>
+<div class="pure-g-r">
+	<div class="pure-u-1">
+		<img src="img/main-banner.png" alt="banner" width="100%"/>
 	</div>
-
-</div>
 <div class="pure-g-r">
 <div class="container">
 	<div class="pure-u-1">
