--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<meta name="Keywords" content="crowdfunding, chefs, foodie, diner, pop up restaurant" />
 	<link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.1.0/pure-min.css">
 	<link rel="stylesheet" href="main.css"/>
-	<link href='http://fonts.googleapis.com/css?family=Pompiere' rel='stylesheet' type='text/css'>
+	<link href='http://fonts.googleapis.com/css?family=Libre+Baskerville:400,700' rel='stylesheet' type='text/css'>
 	<script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
 	<script src="jquery.slides.min.js"></script>
 
@@ -153,7 +153,8 @@
 				<li><a href="">What is Pop-up?</a></li>
 				<li><a href="#">Chef Profiles</a></li>
 				<li><a href="#">Create a Pop-up</a></li>
-				<li><a href="#">Are you a chef?</a></li>
+				<li><a href="#">Are you a Chef?</a></li>
+				<li><a href="#">Are you a Restaurant?</a></li>
 			</ul>
 		</div>
 	</div>
