--- a/chef.html
+++ b/chef.html
@@ -62,7 +62,7 @@
 		<div class="pure-u-3-5"> &nbsp;</div>
 	
 		<div class="pure-u-1-5">
-			<button class="pure-button" style="margin: .83em;">Create a new pop up</button>
+			<button class="pure-button" style="margin: .83em; float: right;">Create a new pop up</button>
 		</div>
 	</div>
 	
@@ -70,7 +70,7 @@
 
 		<div class="project pure-g-r">
 			<div class="pure-u-1">
-				<h3>Tako Truck <span style="font-size: .7em; padding-left: .7em;">edit<span> <span style="padding-left: .7em;">|   guest list<span></h3> 
+				<h3>Tako Truck <span style="font-size: .7em; padding-left: .7em;">edit<span> <span style="padding-left: .7em;">| guest list<span></h3> 
 			</div>
 
 			<div class="pure-u-1-5">
@@ -95,13 +95,13 @@
 					
 					
 					<div class="pure-u-1-6" style="display: inline-block; ">
-						<p class="funded">80% Funded</p>
+						<p class="funded">7% Funded</p>
 					</div>
 					<div class="pure-u-1-6" style="display: inline-block;">
 							<p class="funded" style= "text-align: center;">|</p>
 					</div>
 					<div class="pure-u-1-6" style="display: inline-block;">
-							<p class="funded" style= "text-align: center;">15 seats left</p>
+							<p class="funded" style= "text-align: center;">25 seats left</p>
 					</div>
 					<div class="pure-u-1-6" style="display: inline-block;">
 							<p class="funded" style= "text-align: center;">|</p>
