--- a/whatis.html
+++ b/whatis.html
@@ -46,3 +46,146 @@
 </div><!--end g-r-->
 </div> <!--end container-->
 </div>
+
+
+<script>
+	$(function(){
+		$("#slides").slidesjs({
+			width: 960,
+			height: 300,
+			play: {
+				active: true,
+				// [boolean] Generate the play and stop buttons.
+				// You cannot use your own buttons. Sorry.
+				effect: "slide",
+				// [string] Can be either "slide" or "fade".
+				interval: 5000,
+				// [number] Time spent on each slide in milliseconds.
+				auto: true,
+				// [boolean] Start playing the slideshow on load.
+				swap: true,
+				// [boolean] show/hide stop and play buttons
+				pauseOnHover: false,
+				// [boolean] pause a playing slideshow on hover
+				restartDelay: 2500
+				// [number] restart delay on inactive slideshow
+			}
+		});
+	});
+</script>
+
+
+<style type="text/css">
+	#slides {
+		display: none
+	}
+
+	#slides .slidesjs-navigation {
+		margin-top:10px;
+		margin-left: 17px;
+	}
+
+	a.slidesjs-next,
+	a.slidesjs-previous,
+	a.slidesjs-play,
+	a.slidesjs-stop {
+		background-image: url(img/btns-next-prev.png);
+		background-repeat: no-repeat;
+		display:block;
+		width:12px;
+		height:18px;
+		overflow: hidden;
+		text-indent: -9999px;
+		float: left;
+	}
+
+	a.slidesjs-next {
+		margin-right:10px;
+		background-position: -12px 0;
+	}
+
+	a:hover.slidesjs-next {
+		background-position: -12px -18px;
+	}
+
+	a.slidesjs-previous {
+		background-position: 0 0;
+	}
+
+	a:hover.slidesjs-previous {
+		background-position: 0 -18px;
+	}
+
+	a.slidesjs-play {
+		width:15px;
+		background-position: -25px 0;
+	}
+
+	a:hover.slidesjs-play {
+		background-position: -25px -18px;
+	}
+
+	a.slidesjs-stop {
+		width:18px;
+		background-position: -41px 0;
+	}
+
+	a:hover.slidesjs-stop {
+		background-position: -41px -18px;
+	}
+
+	.slidesjs-pagination {
+		margin: 7px 0 0;
+		float: right;
+		list-style: none;
+		margin-right: 1.6em;
+	}
+
+	.slidesjs-pagination li {
+		float: left;
+		margin: 0 1px;
+	}
+
+	.slidesjs-pagination li a {
+		display: block;
+		width: 13px;
+		height: 0;
+		padding-top: 13px;
+		background-image: url(img/pagination.png);
+		background-position: 0 0;
+		float: left;
+		overflow: hidden;
+	}
+
+	.slidesjs-pagination li a.active,
+	.slidesjs-pagination li a:hover.active {
+		background-position: 0 -13px
+	}
+
+	.slidesjs-pagination li a:hover {
+		background-position: 0 -26px
+	}
+
+	#slides a:link,
+	#slides a:visited {
+		color: #333
+	}
+
+	#slides a:hover,
+	#slides a:active {
+		color: #9e2020
+	}
+
+	.navbar {
+		overflow: hidden
+	}
+</style>
+
+<script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
+<script src="jquery.slides.min.js"></script>
+
+<img src="http://placehold.it/960x300">
+<img src="http://placehold.it/960x300">
+<img src="http://placehold.it/960x300">
+<img src="http://placehold.it/960x300">
+<img src="http://placehold.it/960x300">
