adjusted chef's page.

--- a/shrimptacular.html
+++ b/shrimptacular.html
@@ -8,7 +8,7 @@
 	<meta name="Keywords" content="crowdfunding, chefs, foodie, diner, pop up restaurant" />
 	<link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.1.0/pure-min.css">
 	<link rel="stylesheet" href="main.css"/>
-	<link href='http://fonts.googleapis.com/css?family=Pompiere' rel='stylesheet' type='text/css'>
+	<link href='http://fonts.googleapis.com/css?family=Libre+Baskerville:400,700' rel='stylesheet' type='text/css'>
 	<link href='http://fonts.googleapis.com/css?family=Muli' rel='stylesheet' type='text/css'>
 	<script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
 </head>
@@ -16,13 +16,13 @@
 <div class="content pure-g-r">
 	<div class="header pure-u-1">
 		<div class="pure-menu pure-menu-open pure-menu-fixed pure-menu-horizontal">
-			<a class="pure-menu-heading" href="/">Wandering Chef</a>
+			<a class="pure-menu-heading" href="index.html">Wandering Chef</a>
 			<ul>
-				<li class="pure-menu-selected"><a href="/">Home</a></li>
-				<li><a href="">What is Pop-up?</a></li>
-				<li><a href="#">Chef Profiles</a></li>
+				<li class="pure-menu-selected"><a href="index.html">Home</a></li>
+				<li><a href="#">Chefs</a></li>
 				<li><a href="#">Create a Pop-up</a></li>
-				<li><a href="#">Are you a chef?</a></li>
+				<li><a href="#">Are you a Restaurant?</a></li>
+				<li><a href="chef.html">Sign-in</a></li>
 			</ul>
 		</div>
 	</div>
@@ -38,7 +38,7 @@
 <div class="pure-g-r">
 <div class="container">
 	<div class="pure-u-1">
-
+		<button class="pure-button pure-button-primary success">Reserve Now! <br> $100</button>
 		    <p class="meal-description">Come join us for a four course meal highlighting the fusion of traditional asian cuisine and
 		       Pacific Northwest.</p>
 	</div>
