--- a/chef.html
+++ b/chef.html
@@ -8,6 +8,8 @@
 	<meta name="Keywords" content="crowdfunding, chefs, foodie, diner, pop up restaurant" />
 	<link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.1.0/pure-min.css">
 	<link rel="stylesheet" href="main.css"/>
+	<link href='http://fonts.googleapis.com/css?family=Playfair+Display:400,700' rel='stylesheet' type='text/css'>
+	<link href='http://fonts.googleapis.com/css?family=Muli' rel='stylesheet' type='text/css'>
 	<script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
 </head>
 <body>
@@ -16,22 +18,56 @@
 	<div class="content pure-g-r">
 		<div class="header pure-u-1">
 			<div class="pure-menu pure-menu-open pure-menu-fixed pure-menu-horizontal">
-				<a class="pure-menu-heading" href="/">Wandering Chef</a>
+				<a class="pure-menu-heading" href="index.html">Wandering Chef</a>
 				<ul>
-					<li class="pure-menu-selected"><a href="/">Home</a></li>
-					<li><a href="">What is Pop-up?</a></li>
-					<li><a href="#">Chef Profiles</a></li>
+					<li class="pure-menu-selected"><a href="index.html">Home</a></li>
+					<li><a href="#">Chefs</a></li>
 					<li><a href="#">Create a Pop-up</a></li>
-					<li><a href="#">Are you a chef?</a></li>
+					<li><a href="#">Are you a Restaurant?</a></li>
+					<li><a href="chef.html">Sign-in</a></li>
 				</ul>
 			</div>
 		</div>
 	</div>
 	<br>
 	<br>
-	<!--End Header -->
-	<!--Projects -->
+	<!-- Side Menu -->
 	<div class="pure-g-r">
+		<div class="pure-u-1-8">
+			<div class="pure-menu pure-menu-open">
+				<a class="pure-menu-heading">Profile</a>
+				<ul>
+					<li><a href="#">Bio</a></li>
+					<li><a href="#">Current</a></li>
+					<li><a href="#">Past</a></li>
+					<li><a href="#">Reserved</a></li>
+				</ul>
+			</div>
+		</div>
+		<div class="pure-u-2-3">
+			<span class="profile-header">Profile </span><span class="edit-profile">edit</span>
+			<p class="profile-name universal-padding">Cormac Mahoney</p>
+			<img class="universal-padding" src="./img/ChefProfile.png" alt="Cormac Picture">
+				<div class="pure-u-1-3">
+					<p class="universal-padding">I cooked most of my life with my family. My mom would be working, so I’d put the chicken in the
+					oven when I got home from school. Now I think the public fetishizes dinner parties, but to me,
+					cooking was my grandma just making straight-up food for the table. And my aunts bringing pies and salads.
+					One of my first food memories was my aunt’s taco salad, with Doritos and ground beef and shredded
+					lettuce and shredded cheddar. That was one of the first food compliments I remember giving—I told her,
+					‘This is really, really good.’</p>
+				</div>
+		</div>
+	</div>
+
+
+
+
+
+
+
+	<!--Projects
+	<div class="pure-g-r">
+
 		<div class="pure-u-1">
 			<h1>Cormac Mahoney</h1>
 		</div>
@@ -66,7 +102,7 @@
 		</div>
 	</div>
 	
-	<!-- project 1 section -->
+
 
 		<div class="project pure-g-r">
 			<div class="pure-u-1">
@@ -124,7 +160,6 @@
 			</div>
 		</div>
 
-		<!-- project 2 section -->
 
 		<div class="project pure-g-r">
 			<div class="pure-u-1">
@@ -153,7 +188,6 @@
         
 
 	</div>
-
 
 
 <!-- Footer -->
