--- a/index.html
+++ b/index.html
@@ -9,19 +9,19 @@
 	<link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.1.0/pure-min.css">
 	<link rel="stylesheet" href="main.css"/>
 	<link href='http://fonts.googleapis.com/css?family=Libre+Baskerville:400,700' rel='stylesheet' type='text/css'>
+	<link href='http://fonts.googleapis.com/css?family=Muli' rel='stylesheet' type='text/css'>
 </head>
 <body>
 <div class="content pure-g-r">
 	<div class="header pure-u-1">
 		<div class="pure-menu pure-menu-open pure-menu-fixed pure-menu-horizontal">
-			<a class="pure-menu-heading" href="/">Wandering Chef</a>
+			<a class="pure-menu-heading" href="index.html">Wandering Chef</a>
 			<ul>
 				<li class="pure-menu-selected"><a href="index.html">Home</a></li>
-				<li><a href="">What is Pop-up?</a></li>
-				<li><a href="#">Chef Profiles</a></li>
+				<li><a href="#">Chefs</a></li>
 				<li><a href="#">Create a Pop-up</a></li>
-				<li><a href="#">Are you a Chef?</a></li>
 				<li><a href="#">Are you a Restaurant?</a></li>
+				<li><a href="chef.html">Sign-in</a></li>
 			</ul>
 		</div>
 	</div>
