fixed top header spacing

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 							<!--End Header -->
 <div class="content pure-g-r">
 	<div class="pure-u-1">
-		<img src="img/WhatIsPopUp.png" width="100%">
+		<img src="img/WhatIsPopUp.png" width="100%" style="margin-top: -1px;">
 
 	</div>
 
