fixed banner space

--- a/shrimptacular.html
+++ b/shrimptacular.html
@@ -33,7 +33,7 @@
 <!--Projects -->
 <div class="pure-g-r">
 	<div class="pure-u-1">
-		<img src="img/main-banner.png" alt="banner" width="100%"/>
+		<img src="img/main-banner.png" alt="banner" width="100%" style="margin-top: -1px;"/>
 	</div>
 <div class="pure-g-r">
 <div class="container">
