added some photos

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
 <br>
 <br>
 							<!--End Header -->
+<div class="profile-container">
 <div class="content pure-g-r">
 	<div class="pure-u-1">
 		<img src="img/WhatIsPopUp.png" width="100%">
